fixed double border on chat-header

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -229,7 +229,6 @@ li {
   margin: 0;
   background: #4f60ad !important;
   height: 40px;
-  border: 1px solid #fff;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
